Inserindo resposta em um elemento html. Preparando para fazer marcacao colorida das entidades.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
 
 <body>
   <br>
-  <form action="/entity_recon_script" id="textform" method='post'>
+  <form action="/" id="textform" method='post'>
     <textarea rows="20" cols="100" name="content" form="textform"></textarea>
     <input type="submit">
   </form>
